# decodify

./: .gitignore  README.md
.github/workflows/: docker-release.yml
api/: .dockerignore  Dockerfile  hop.yml  pyproject.toml  requirements.txt
api/src/: app.py  exceptions.py  utils.py
extension/: .prettierrc  manifest.json  popup.html
extension/css/: popup.css
extension/js/: background.js  inject.js  popup.js
